# freenetconfd-plugin-dt-network

./: CMakeLists.txt
netconf/: network.js
network_scripts/: ifconfig.sh  ifconfig_6.sh  interface_layer.sh  interfaces_parameter.sh  neighbor.sh  neighbor_6.sh
src/: network.c
